--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Inicio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="css/index.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/navbar.css" />
+    <link href="components/styles/index.css" rel="stylesheet" />
+    <link rel="stylesheet" href="components/styles/navbar.css" />
   </head>
   <body>
     <header class="header">
